2003-03-23  Bernhard Held <bernhard@bernhardheld.de>

	* doc/cdbfile.html: removed, replaced by cdbfileformat.lyx
	Added Lenny Story's debug infrastructure changes:
	* src/Makefile.in:  added new files cdbFile.c and SDCCdebug.c
	* src/Makefile.bcc: added new files cdbFile.c and SDCCdebug.c
	* src/cdbFile.c: added
	* src/SDCCdebug.c: added
	* src/SDCCdebug.h: added
	* src/SDCCast.c (createFunction)
	* src/SDCCglue.c (emitRegularMap, emitStaticSeg, emitOverlay, glue)
	* src/SDCCmain.c (parseCmdLine, main)
	* src/SDCCmem.c (redoStackOffsets)
	* src/SDCCsymt.c (cdbStructBlock, cdbTypeInfo, cdbSymbol, cdbStruct, cdbStructBlock)
	* src/SDCCsymt.h
	* src/common.h
	* src/avr/gen.c (genAVRCode)
	* src/ds390/gen.c (gen390Code)
	* src/mcs51/gen.c (gen51Code) 
	* src/pic/gen.c (genpic14Code)
	* src/pic/glue.c (pic14emitRegularMap, pic14emitStaticSeg, pic14emitOverlay, picglue)
	* src/xa51/gen.c (genXA51Code)
	* src/SDCCast.c: fixed "void foo(void){char c; -c < 0;}"

2003-03-22  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genCodePointerGet): quicker code for bug #700797
	* src/mcs51/peeph.def: added rules 177, 241.x to 243, touched 181, 182.x, 193.x

2003-03-22    <johan@balder>

	* src/SDCCicode.c (geniCodeDerefPtr): fixed bug #698231

2003-03-21  Bernhard Held <bernhard@bernhardheld.de>

	* support/scripts/sdcc_mingw32: adapted to configure from autoconf 2.54
	* doc/cdbfileformat.lyx: added, written by Lenny Story
	* doc/Makefile: added cdbfileformat.lyx
	* doc/clean.mk: added cdbfileformat.lyx

2003-03-20  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/peeph.def: fix bug #705773

2003-03-20    <johan@balder>

	An sfr/sbit can have an "at #" AND an initializer
	* src/SDCCsymt.c (checkSClass): 
	* src/SDCCmem.c (allocGlobal): 
	* src/SDCCmem.c (allocLocal): 
	* src/SDCCast.c (createBlock): 

2003-03-17  Bernhard Held <bernhard@bernhardheld.de>

	* src/ds390/peeph.def: fix bug #704878: added rule 213.b suggested by Jan Rejlek
