@@ -1,3 +1,9 @@
+2003-03-26    <johan@balder>
+
+	* src/mcs51/gen.c (saveRegisters): catched symbol abuse
+	* src/ds390/gen.c (saveRegisters): catched symbol abuse
+	* src/SDCCast.c (decorateType): fixed " -v < 3"
+
 2003-03-23  Bernhard Held <bernhard@bernhardheld.de>
 
 	* doc/cdbfile.html: removed, replaced by cdbfileformat.lyx
